86c6b94y2:fixed bugs according to Copilots review